--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
         <ul>
             <li>
                 <div class="CountryData">Country</div>
-                <div class="CasesData">Confirmed</div>
+                <div class="CasesData">Confirmed Cases</div>
                 <div class="DeathsData">Deaths</div>
             </li>
         </ul>
     </div>
 
-    <a href="https://github.com/M-Media-Group/Covid-19-API">Data Source</a>
+    <a id="dsourse" href="https://github.com/M-Media-Group/Covid-19-API">Data Source</a>
     <script src="app.js"></script>
 </body>
 </html>
